env rde