@@ -1,18 +1,22 @@
 package org.heattech.heattech.jwt;
 
+import org.heattech.heattech.domain.member.domain.Role;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
     private final Long id;
     private final String username;
+    private final Role role;
 
-    public CustomUserDetails(Long id, String username) {
+    public CustomUserDetails(Long id, String username, Role role) {
         this.id = id;
         this.username = username;
+        this.role = role;
     }
 
     public Long getId() {
@@ -24,6 +28,11 @@ public class CustomUserDetails implements UserDetails {
         return username;
     }
 
+    public Role getRole() {
+        return role;
+    }
+
+
     @Override
     public String getPassword() {
         return ""; // 비밀번호 인증 안 할 거면 빈 값
@@ -31,7 +40,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 권한 없으면 빈 리스트
+        return List.of(()->"ROLE_" + role.name()); // role 권한 부여
     }
 
     @Override
